add images for test

--- a/AppSimple/Components/Nonlocalized.lproj/Main.wo/Main.html
+++ b/AppSimple/Components/Nonlocalized.lproj/Main.wo/Main.html
@@ -6,5 +6,8 @@
 	</head>
 	<body>
 Hello World
+
+<tb:image framework = "App" filename = "images/logo.png" />
+<tb:image framework = "TBContentsDelivery" filename = "images/help.png" />
 	</body>
 </html>
