--- a/AppSimple/Components/Nonlocalized.lproj/Main.wo/Main.html
+++ b/AppSimple/Components/Nonlocalized.lproj/Main.wo/Main.html
@@ -5,9 +5,15 @@
 		<title>Untitled</title>
 	</head>
 	<body>
-Hello World
+Hello Maven World
 
 <tb:image framework = "App" filename = "images/logo.png" />
 <tb:image framework = "TBContentsDelivery" filename = "images/help.png" />
+<br />
+<tb:TBVDate value = "$currentTime"></tb:TBVDate>
+
+== <tb:SampleComponentA /> ==
+== <tb:SampleComponentB /> ==
+
 	</body>
 </html>
